[package]
name = "vision_works"
version = "0.0.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
gdk-pixbuf = { version = "0.8.0" }
gio = { version = "0.8.1", features = ["v2_44"] }
glib = "0.9.3"
gtk = { version = "0.8.1", features = ["v3_16"] }
opencv = "0.32.0"
